# docwen

./: .editorconfig  .gitattributes  .gitignore  DEVELOPMENT.md  LICENSE  LICENSE_THIRD_PARTY.txt  NOTICE.txt  README.md  README_de-DE.md  README_es-ES.md  README_fr-FR.md  README_ja-JP.md  README_ko-KR.md  README_pt-BR.md  README_ru-RU.md  README_vi-VN.md  README_zh-CN.md  README_zh-TW.md  gui_run.cmd  gui_run.ps1  pyproject.toml
.github/workflows/: release.yml  tests.yml
configs/: conversion_config.toml  conversion_defaults.toml  field_processors.toml  file_defaults.toml  gui_config.toml  heading_numbering_add.toml  heading_numbering_clean.toml  image_config.toml  link_config.toml  logger_config.toml  optimization_config.toml  output_config.toml  proofread_config.toml  proofread_sensitive.toml  proofread_symbols.toml  proofread_typos.toml  sensitive_words.toml  software_priority.toml  style_code.toml  style_formula.toml  style_quote.toml  style_table.toml  symbol_settings.toml  typos_settings.toml
doc/: CHANGELOG.md  cli_json_output_schema.json  cli_json_output_schema.md  代码门禁与检查规范.md  多级列表序号优化计划.md  技术文档.md  模板样式完整规范.md  软件说明书.md
samples/: sample.md
scripts/: dev_checks.py  gui_smoke.py
scripts/clean/: clean_all.py  clean_build.py  clean_cython.py  clean_runtime.py  clean_tests.py  clean_utils.py
scripts/maintenance/: audit_tech_doc.py  generate_templates.py  source_code_collector.py  空白模板.docx
src/: cli_run.py  gui_run.py
src/docwen/: __init__.py  __main__.py  bootstrap.py  cli_run.py  errors.py  formats.py  gui_run.py  proofread_keys.py  translation.py
src/docwen/cli/: __init__.py  doctor.py  executor.py  i18n.py  (+3 more)
src/gongwen_converter/: __init__.py  bootstrap.py
templates/: Deutsche Allgemeine Vorlage.docx  English General Template.docx  English Sample Sheet Template.xlsx  Modelo Geral Português.docx  Modèle Général Français.docx  Mẫu Chung Tiếng Việt.docx  Plantilla General Española.docx  Русский Общий Шаблон.docx  公文通用.docx  日本語汎用テンプレート.docx  测试.docx  白头文.docx  简体中文通用模板.docx  繁體中文通用模板.docx  表格测试.xlsx  非公文通用.docx  한국어 범용 템플릿.docx
tests/: conftest.py
tests/test_cli/: test_executor.py  test_json_golden.py  test_json_schema.py  test_main_headless_batch.py  test_main_validation.py  test_stdout_stderr_contract.py  test_utils_input.py
tests/test_config/: test_config_manager.py  test_gui_config_dpi_override.py  test_safe_logger.py  test_toml_operations.py
tests/test_converter/: test_converter_misc.py  test_csv_convert.py  test_docx2md_extracted_doc_save.py  test_docx2md_shared_processors.py  test_docx_table_merges.py  test_field_registry_api.py  test_gongwen_fields.py  test_image_compression_atomic.py  test_image_core.py  test_image_limit_size_compression.py  test_integration_file_detection.py  test_invoice_cn_layout2md.py  test_invoice_cn_ofd_fallback.py  test_invoice_cn_pdf_parsing.py  test_md2docx_data_uri_image.py  test_md2docx_eastasia_hint.py  test_md2docx_formula_handler.py  test_md2docx_md_processor.py  test_md2docx_temp_cleanup.py  test_md2xlsx_data_uri_image.py  test_md_frontmatter_parsing.py  test_note_handler_replace_atomic.py  test_pdf2md_image_ocr_semantics.py  test_pdf_export_safe_output.py  test_pdf_to_docx_headless.py  test_pdf_to_docx_safe_output.py  test_shared_image_md.py  test_smart_converter.py  test_xlsx2md_blocks.py  test_xlsx2md_core.py  test_xml_processor_output_naming.py
tests/test_docx_spell/: test_core.py  test_output_save.py  test_proofread_options.py
tests/test_errors/: test_errors.py
tests/test_gui/: test_action_panel_numbering_source.py  test_batch_event_adapter.py  test_category_boundary.py  test_error_message_formatting.py  test_event_handler_drop.py  test_proofread_options_defaults.py  test_settings_dialog_export_tab_persist.py  test_window_gui_state_scaling.py
tests/test_i18n/: test_cli_key_groups_consistency.py  test_locales_toml.py  test_settings_extraction_keys.py
tests/test_ipc/: test_file_ipc.py  test_single_instance.py
tests/test_repo/: test_no_build_artifacts.py
tests/test_security/: test_bootstrap_strict_security.py  test_expiration_check.py  test_network_isolation.py
tests/test_services/: test_batch_events.py  test_category_consistency.py  test_conversion_request_validation.py  test_conversion_result.py  test_conversion_service_contract.py  test_error_registry.py  test_exit_codes.py  test_image_format_conversion_output_save.py  test_image_to_markdown.py  test_image_to_pdf.py  test_layout_operations_output_save.py  test_layout_operations_pdf.py  test_layout_preprocess.py  test_layout_to_image_render.py  test_layout_to_markdown_options.py  test_manifest_and_intermediates.py  test_markdown_to_csv_output_dir_and_naming.py  test_md_options_base64_forces_main_md.py  test_merge_images_to_tiff.py  test_numbering_normalization.py  test_result_presentation.py  test_spreadsheet_format_conversion_csv_output.py  test_spreadsheet_pipeline_smoke.py  test_strategies_registry.py  test_strategies_registry_specs.py  test_table_merger_temp_naming.py  test_txt_input_only.py
tests/test_table_merger/: test_table_merger_core.py  test_table_merger_output_save.py
tests/test_utils/: test_date_utils.py  test_dpi_utils.py  test_font_utils.py  test_heading_numbering.py  test_heading_utils.py  test_link_processing.py  test_link_processing_data_uri.py  test_link_processing_table_safe.py  test_logging_utils.py  test_markdown_table_extraction.py  test_markdown_utils.py  test_markdown_utils_base64_compress.py  test_number_utils.py  test_ocr_utils.py  test_path_utils.py  test_text_utils.py  test_validation_utils.py  test_workspace_manager_intermediates.py  test_workspace_manager_output_directory.py  test_workspace_manager_replace_atomic.py  test_workspace_manager_save_fallback.py  test_yaml_utils.py
tools/: check_core_coverage.py  debug_invoice_fitz_insert.py  debug_invoice_multi_page.py  invoice_md_validate.py  invoice_ocr_eval.py  pdf_text_lengths.py  pth_report.py  qa.py  remove_note_env.ps1  typecheck.py
typings/tkinterdnd2/: __init__.pyi
typings/ttkbootstrap/: __init__.pyi  constants.pyi  scrolled.pyi  tableview.pyi
(+447 files in other folders)
