[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "docwen"
dynamic = ["version"]
description = "公文图表格式转换软件 - 支持 Word/Markdown/Excel 互转"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "AGPL-3.0-or-later"}
authors = [
    {name = "ZhengYX", email = "zhengyx91@hotmail.com"}
]
keywords = ["document", "converter", "markdown", "docx", "excel", "office", "公文", "表格"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Office/Business",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Operating System :: Microsoft :: Windows",
]

dependencies = [
    # 图形界面
    "ttkbootstrap>=1.18.0",
    "tkinterdnd2>=0.4.3",
    "Pillow>=11.3.0,<12.0.0",
    
    # 文档处理
    "python-docx>=1.2.0",
    "emoji>=2.0.0",
    "openpyxl>=3.1.5",
    "lxml>=6.0.2",
    "latex2mathml>=3.77.0",
    "PyYAML>=6.0.2",
    "tomlkit>=0.13.3",
    "pandas>=2.3.3",
    "olefile>=0.47",  # OLE文件格式解析，用于精确识别DOC/XLS
    
    # PDF/OFD处理
    "pymupdf>=1.26.6",
    "pymupdf4llm>=0.1.8",
    "pdf2docx>=0.5.6",
    "easyofd>=0.5.6",  # OFD文件转PDF
    
    # 数值计算
    "numpy>=2.3.4,<3.0.0",
    
    # 图片转换
    "img2pdf>=0.6.1",
    "pillow-heif>=1.1.1",
    
    # OCR支持
    "rapidocr_onnxruntime>=1.4.0",
    
    # Windows COM 自动化
    "pywin32>=311",
    
    # IPC 进程间通信
    "watchdog>=6.0.0",
]

[project.optional-dependencies]
dev = [
    # 构建与打包
    "Cython==3.1.6",
    "pyinstaller==6.16.0",
]
test = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
docwen = "docwen.cli_run:main"
docwen-gui = "docwen.gui_run:main"

[tool.setuptools]
packages = ["docwen"]
package-dir = {"" = "src"}

[tool.setuptools.dynamic]
version = {attr = "docwen.__version__"}

[tool.setuptools.package-data]
docwen = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short --strict-markers -m \"not integration and not slow\""
markers = [
    "unit: 单元测试",
    "integration: 集成测试（需要真实文件）",
    "slow: 耗时测试",
    "windows_only: 仅 Windows 环境",
]

[tool.coverage.run]
branch = true
source = ["docwen"]
omit = [
    "*/tests/*",
    "*/docwen/gui/*",
]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 15
